# Mandelbrot

./: .gitignore  Cargo.toml  README.md  aliases.ps1
src/: main.rs  mode.rs  utils.rs
src/fractal/: config.rs  generators.rs  math.rs  mod.rs  trans.rs
src/mandelbrot/: config.rs  mod.rs  trans.rs
src/model/: mandelbrot.rs  mod.rs
src/user/: cli.rs  gui.rs  mod.rs  worker.rs
src/utils/: loader.rs  mod.rs  worker.rs
