[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Lupuss <damian.baczynski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raster = "0.2.0"
num_cpus = "1.12.0"
palette = "0.5.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clap = "2.33.0"
sdl2 = "0.33.0"
